# clam

./: .gitignore  GRAMMAR.md  LICENSE  README.md  clam  clam2  dune-project  example.clam  grammar.md
notes/: DEBUGGING.md  QUESTIONS.md  RESOURCES.md  SUBTYPING.md
semantics/: bibliography.bib  semantics.typ
specs/: specs.typ
src/: ast.ml  collection.ml  display.ml  display_ast.ml  display_type.ml  dune  error.ml  expr.ml  functor.ml  lexer.mll  main.ml  model.ml  modelize.ml  modelize_error.ml  modelize_errors.ml  modelize_exprs.ml  modelize_state.ml  modelize_types.ml  monad.ml  parser.mly  runtime_display.ml  runtime_eval.ml  runtime_value.ml  scope.ml  type.ml  typecheck.ml  typecheck_errors.ml  typing.ml  typing_check.ml  typing_errors.ml  typing_sub.ml
src/abt/: README.md  abt.ml  bind.ml  display.ml  display.mli  dune  expr.ml  node.ml  program.ml  span.ml  type.ml
src/ast/: ast.ml  display.ml  dune  node.ml  reflect.ml  span.ml
src/clam/: clam.ml  config.ml  dune  error.ml  help.ml  lexer.mll  lib.ml  main.ml  model.ml  monad.ml  parser.mly  primitive.ml  primitive2.ml  type.ml  utils.ml
test/: dune
tests/: apply.clam  book.clam  booleans.clam  booleans.clam.out  bot.clam  bugs.clam  characters.clam  constraints.clam  currying.clam  expr_abs.clam  expr_abs.clam.out  functions.clam  hello_world.clam  hot.clam  hot.clam.out  inference.clam  integers.clam  interface.clam  interface.clam.out  intersection.clam  intersection.clam.out  miscellaneous.clam  monad.clam  monad.clam.out  object.clam  records.clam  records.clam.out  strings.clam  tuples.clam  tuples.clam.out  type_abs.clam  type_abs.clam.out  union.clam
(+306 files in other folders)
